combining jinja templating with apis

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,21 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>{{ 5 * 6 }}</h2>
-    <h3>Random Number: {{ num }}</h3>
-    <footer>
-        <p>
-            Copyright {{ copyright_year }}. Built by Christian Tsoungui Nkoulou
-        </p>
-    </footer>
+    {% if name == None %}
+        <h1>Hello World</h1>
+        <h2>{{ 5 * 6 }}</h2>
+        <h3>Random Number: {{ num }}</h3>
+        <footer>
+            <p>
+                Copyright {{ copyright_year }}. Built by Christian Tsoungui Nkoulou
+            </p>
+        </footer>
+
+    {% else %}
+        <h1>Hey {{name}},</h1>
+        <h2>I think you are a {{gender}},</h2>
+        <h3>And maybe {{age}} year old.</h3>
+    {% endif %}
+
 </body>
 </html>
