--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,9 +6,10 @@
 </head>
 <body>
     {% for blog in blogs %}
-        <h1>{{ blog["title"] }}</h1>
-        <h2>{{ blog["subtitle"] }}</h2>
-        <p>{{ blog["body"] }}</p>
+        {% if blog["id"] == 2 %}
+            <h1>{{ blog["title"] }}</h1>
+            <h2>{{ blog["subtitle"] }}</h2>
+            <p>{{ blog["body"] }}</p>
     {% endfor %}
 </body>
 </html>
