--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,6 +10,7 @@
             <h1>{{ blog["title"] }}</h1>
             <h2>{{ blog["subtitle"] }}</h2>
             <p>{{ blog["body"] }}</p>
+        {% endif %}
     {% endfor %}
 </body>
 </html>
