--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% for blog in blogs %}
-        {% if blog["id"] == 2 %}
+        {% if blog["id"] == num %}
             <h1>{{ blog["title"] }}</h1>
             <h2>{{ blog["subtitle"] }}</h2>
             <p>{{ blog["body"] }}</p>
