--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <h1>Hello World</h1>
         <h2>{{ 5 * 6 }}</h2>
         <h3>Random Number: {{ num }}</h3>
+        <a href="{{ url_for('blog_page', num = 3) }}">Go To Blog</a>
         <footer>
             <p>
                 Copyright {{ copyright_year }}. Built by Christian Tsoungui Nkoulou
